--- a/src/listPages.pug
+++ b/src/listPages.pug
@@ -25,6 +25,10 @@
       href: 'bridge.html',
       progress: '100'
     }, {
+      name: 'Venture',
+      href: 'venture.html',
+      progress: '100'
+    }, {
       name: 'Playground - step 1',
       href: 'playground-step-1.html',
       progress: '100'
