--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -42,3 +42,7 @@
 @import "_components/bridge/bridge";
 
 @import "_components/playground/playground";
+
+@import "_components/venture/venture";
+@import "_components/venture/deals";
+@import "_components/venture/closed";
