Playground pages :::  - revision;

--- a/src/listPages.pug
+++ b/src/listPages.pug
@@ -33,6 +33,10 @@
       href: 'playground-step-1.html',
       progress: '100'
     }, {
+      name: 'Playground - step 1-1',
+      href: 'playground-step-1-1.html',
+      progress: '100'
+    }, {
       name: 'Playground - step 2',
       href: 'playground-step-2.html',
       progress: '100'
@@ -55,6 +59,14 @@
     }, {
       name: 'Playground - step 7',
       href: 'playground-step-7.html',
+      progress: '100'
+    }, {
+      name: 'Playground - step 8',
+      href: 'playground-step-8.html',
+      progress: '100'
+    }, {
+      name: 'Playground - step 9',
+      href: 'playground-step-9.html',
       progress: '100'
     }
   ];
