--- a/src/pug/components/playground/staking-playground-step-1-1.pug
+++ b/src/pug/components/playground/staking-playground-step-1-1.pug
@@ -95,16 +95,8 @@ section#staking.staking
 
       div
 
-        .c-dropdown__wrapper
-          a.c-dropdown__toggle(href="#")
-            span Filter by
-            i.icon-font.icon-chevron-down
-          .c-dropdown
-            div
-              a(href="#")
-                span Action 1
-              a(href="#")
-                span Action 2
+        .staking__btn.c-btn__wrapper
+          a.c-btn(href="#playgroundFilter" data-effect='mfp-zoom-in' popup-js) Filters
 
         .c-dropdown__wrapper
           a.c-dropdown__toggle(href="#")
