--- a/src/pug/components/playground/staking-playground-step-4.pug
+++ b/src/pug/components/playground/staking-playground-step-4.pug
@@ -40,41 +40,37 @@ section#playground.playground
       div
 
         a.playground__box(href="#" class!= classMod)
+          .playground__box-top
+            div
+              img(src="img/circle-logo.svg" alt="")
+              p preRSIST
+            div
+              span -14h 34m 35s
           .playground__box-head
-            .playground__box-header
-              div
-                span 12eij13jlk12312asdioasdgaosdb
-              div
-                p.playground__box-badge!= '14h 34m 35s'
-            .playground__box-num
-              img(src="img/img-playground-box-bg.svg" alt="")
-              p!= '345'
+            div
+              .playground__box-visual
+                img(src="img/img-venture.svg" alt="")
+                p 100
           .playground__box-body
-            ul.playground__box-list
+            ul
               li
-                div
-                  p Amount
-                div
-                  p 345.00
+                p Amount: 210.00
               li
-                div
-                  p Current bid
-                div
-                  img(src="img/logo-playground.png" srcset='img/logo-playground@2x.png 2x' alt="")
-                  p 1453.00
-              li
-                div
-                  p Buy now price
-                div
-                  img(src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt="")
-                  p 2100.00
+                p!= "Reserve Price"
+          .playground__box-footer
+            p
+              span Current Bid:
+              img(src="img/circle-logo.svg" alt="")
+              span 1920.00
 
     .playground__section-right
       div
 
+        h2.playground__title Buy Now
+
         form.playground__form(action='' method='' autocomplete='off')
           .playground__form-field
-            p.playground__form-label Buy Now
+            p.playground__form-label Price
             label
               input(type='text' name='' placeholder='')
               img(src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt="")
