--- a/src/pug/components/playground/staking-playground-step-5.pug
+++ b/src/pug/components/playground/staking-playground-step-5.pug
@@ -40,41 +40,31 @@ section#playground.playground
       div
 
         a.playground__box(href="#" class!= classMod)
+          .playground__box-top
+            div
+              img(src="img/circle-logo.svg" alt="")
+              p preRSIST
+            div
           .playground__box-head
-            .playground__box-header
-              div
-                span 12eij13jlk12312asdioasdgaosdb
-              div
-                p.playground__box-badge!= '14h 34m 35s'
-            .playground__box-num
-              img(src="img/img-playground-box-bg.svg" alt="")
-              p!= '345'
-          .playground__box-body
-            ul.playground__box-list
-              li
-                div
-                  p Amount
-                div
-                  p 345.00
-              li
-                div
-                  p Current bid
-                div
-                  img(src="img/logo-playground.png" srcset='img/logo-playground@2x.png 2x' alt="")
-                  p 1453.00
-              li
-                div
-                  p Buy now price
-                div
-                  img(src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt="")
-                  p 2100.00
+            div
+              .playground__box-visual
+                img(src="img/img-venture.svg" alt="")
+                p 100
 
     .playground__section-right
       div
 
+        h2.playground__title Make Offer
+
         form.playground__form(action='' method='' autocomplete='off')
           .playground__form-field
-            p.playground__form-label Make an Offer
+            p.playground__form-label Amount
+            label
+              input(type='text' name='' placeholder='')
+              img(src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt="")
+              span / 6571.22 USDC
+          .playground__form-field
+            p.playground__form-label Offer
             label
               input(type='text' name='' placeholder='')
               img(src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt="")
