--- a/src/scss/_components/playground/playground.scss
+++ b/src/scss/_components/playground/playground.scss
@@ -28,13 +28,7 @@
 
       > div {
         width: 100%;
-        max-width: 286px;
-      }
-
-      .playground__box {
-        &-list {
-          padding-bottom: 0;
-        }
+        max-width: 228px;
       }
     }
 
@@ -55,6 +49,16 @@
         width: 100%;
         max-width: 320px;
       }
+
+      .staking__toggle {
+        margin-right: 0;
+
+        a {
+          flex: 1;
+          min-width: 1px;
+          max-width: 100%;
+        }
+      }
     }
   }
 
@@ -62,18 +66,67 @@
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    border: 1px solid #FFFFFF;
+    border: 1px solid #4C4355;
     background-color: #2a252f;
+    @include transition(border-color);
 
-    &.is-ended {
-      pointer-events: none;
+    &:hover {
+      border-color: #F1F1F2;
+      @include transition(border-color);
 
-      .playground__box {
-        &-num {
-          p {
-            color: #ffffff;
+      .playground__box-footer {
+        .c-btn {
+          &__wrapper {
+            opacity: 1;
+            visibility: visible;
+            @include transition(opacity, opacity);
           }
         }
+      }
+    }
+
+    &-top {
+      position: relative;
+      top: -1px;
+      left: -1px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: calc(100% + 2px);
+      height: 33px;
+      padding: 6px 12px;
+      background-color: #F1F1F2;
+
+      > div {
+        &:nth-of-type(1) {
+          display: flex;
+          align-items: center;
+        }
+      }
+
+      img {
+        display: block;
+        width: 20px;
+        height: 20px;
+
+        & + p {
+          padding-left: 8px;
+        }
+      }
+
+      p {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 20px;
+        color: #1E1A22;
+      }
+
+      span {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        text-align: right;
+        color: #DF1931;
       }
     }
 
@@ -82,140 +135,125 @@
       flex: 1;
       min-height: 1px;
       max-height: 100%;
-      padding: 16px;
     }
 
     &-head {
       position: relative;
+      padding: 12px 20px;
+
+      > div {
+        width: 100%;
+        border-radius: 4px;
+        border: 1px solid #4C4355;
+      }
+    }
+
+    &-body,
+    &-footer {
+      padding: 12px;
+      background-color: #1e1a22;
     }
 
     &-body {
-      background-color: #1e1a22;
+      ul {
+        display: flex;
+        flex-direction: column;
+
+        li {
+          display: flex;
+
+          &:not(:last-of-type) {
+            padding-bottom: 8px;
+          }
+
+          p {
+            font-weight: 300;
+            font-size: 12px;
+            line-height: 20px;
+            color: #F1F1F2;
+
+            span.green {
+              color: #17d92b;
+            }
+            span.red {
+              color: #df1931;
+            }
+          }
+        }
+      }
+    }
+
+    &-footer {
+      position: relative;
+      border-top: 1px solid #4C4355;
+
+      p {
+        display: flex;
+        align-items: center;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 20px;
+        color: #F1F1F2;
+
+        img {
+          display: block;
+          max-width: 16px;
+          height: auto;
+          margin-left: 12px;
+          margin-right: 8px;
+        }
+      }
 
       .c-btn {
         width: 100%;
         height: 32px;
         font-size: 14px;
-        color: #ffffff;
 
         &__wrapper {
-          padding-bottom: 10px;
+          opacity: 0;
+          visibility: hidden;
+          position: absolute;
+          top: 6px;
+          left: 12px;
+          width: calc(100% - 24px);
+          @include transition(opacity, opacity);
         }
       }
     }
 
-    &-header {
+    &-visual {
+      position: relative;
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      padding-bottom: 10px;
-
-      span {
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        display: block;
-        max-width: 70px;
-        font-weight: 300;
-        font-size: 12px;
-        line-height: 16px;
-        color: #FFFFFF;
-      }
-    }
-
-    &-num {
-      position: relative;
+      justify-content: center;
+      height: 188px;
 
       img {
         display: block;
-        max-width: 100%;
+        max-width: 130px;
         height: auto;
+        max-height: 100%;
         margin-left: auto;
         margin-right: auto;
       }
 
       p {
-        z-index: 5;
         position: absolute;
-        top: 0;
         left: 0;
+        bottom: 20px;
         display: flex;
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 100%;
+        height: 42px;
+        background-image: url('../img/playground-box-visual-bg.svg');
+        background-repeat: no-repeat;
+        background-position: center;
         font-weight: 500;
         font-size: 20px;
-        line-height: 1;
-        color: #1E1A22;
-      }
-    }
-
-    &-badge {
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: auto;
-      max-width: 100px;
-      height: 20px;
-      padding-left: 8px;
-      padding-right: 8px;
-      padding-bottom: 2px;
-      border-radius: 10px;
-      background-color: #DF1931;
-      font-weight: 500;
-      font-size: 12px;
-      color: #FFFFFF;
-
-      &.is-out {
-        background-color: #4c4355;
-      }
-    }
-
-    &-list {
-      display: flex;
-      flex-direction: column;
-      padding-bottom: 12px;
-
-      li {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding-bottom: 8px;
-
-        div {
-          display: flex;
-          align-items: center;
-
-          img {
-            display: block;
-            max-width: 100%;
-            height: auto;
-            margin-right: 8px;
-          }
-        }
-      }
-
-      p {
-        font-weight: 300;
-        font-size: 12px;
         line-height: 20px;
-        color: #F1F1F2;
-      }
-    }
-
-    &-info {
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 24px;
-      text-align: center;
-      color: #FFFFFF;
-
-      &.hidden {
-        opacity: 0;
+        text-align: center;
+        color: #1E1A22;
       }
     }
 
@@ -223,15 +261,15 @@
       position: relative;
       display: flex;
       flex-wrap: wrap;
-      left: -16px;
-      width: calc(100% + 16px);
-      padding: 0 20px 20px;
+      left: -13px;
+      width: calc(100% + 13px);
+      //padding: 0 20px 20px;
 
       > div {
         width: 100%;
-        max-width: calc(100% / 4);
-        padding-left: 16px;
-        padding-bottom: 16px;
+        max-width: calc(100% / 5);
+        padding-left: 13px;
+        padding-bottom: 13px;
         @include adaptive(1279) {
           max-width: calc(100% / 3);
         }
@@ -242,6 +280,11 @@
           max-width: 100%;
         }
       }
+    }
+
+    &-container {
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
 
