--- a/src/scss/_components/staking.scss
+++ b/src/scss/_components/staking.scss
@@ -245,6 +245,40 @@
         flex-direction: column;
       }
 
+      &.is-big {
+        @include adaptive(1279) {
+          flex-wrap: wrap;
+
+          > div {
+            width: 100%;
+
+            &:nth-of-type(2) {
+              display: flex;
+              align-items: center;
+              justify-content: flex-end;
+              padding-top: 10px;
+            }
+          }
+
+          .staking__form {
+            max-width: 100%;
+          }
+        }
+        @include adaptive(767) {
+          > div {
+            &:nth-of-type(2) {
+              flex-wrap: wrap;
+
+              .staking__switch {
+                width: 100%;
+                padding-left: 0;
+                padding-top: 10px;
+              }
+            }
+          }
+        }
+      }
+
       > div {
         @include adaptive(767) {
           width: 100%;
@@ -258,12 +292,26 @@
             flex-direction: column;
           }
         }
+        &:nth-of-type(2) {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+        }
       }
 
       .c-dropdown {
         &__wrapper {
+          min-width: 160px;
           @include adaptive(767) {
             max-width: 100%;
+          }
+
+          & + .c-dropdown__wrapper {
+            margin-left: 16px;
+            @include adaptive(767) {
+              margin-left: 0;
+              padding-top: 10px;
+            }
           }
         }
 
@@ -377,10 +425,123 @@
     }
   }
 
+  &__btn {
+    margin-right: 16px;
+    @include adaptive(767) {
+      width: 100%;
+      margin-bottom: 10px;
+      margin-right: 0;
+    }
+
+    .c-btn {
+      border-color: #fff;
+      color: #F1F1F2;
+      font-size: 14px;
+      @include adaptive(767) {
+        width: 100%;
+      }
+
+      &:hover {
+        background-color: #ffffff;
+        color: #1e1a22;
+      }
+    }
+  }
+
+  &__switch {
+    display: flex;
+    align-items: center;
+    padding-left: 32px;
+
+    p {
+      padding-right: 16px;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 20px;
+      color: #F1F1F2;
+    }
+
+    label {
+      cursor: pointer;
+      position: relative;
+      display: flex;
+
+      input {
+        opacity: 0;
+        position: absolute;
+        width: 0;
+        height: 0;
+
+        &:checked {
+          & + span {
+            background-color: #17d92b;
+            @include transition(background-color);
+
+            &:after {
+              transform: translateX(15px);
+              background-color: #ffffff;
+              @include transition(transform, background-color);
+            }
+          }
+        }
+      }
+
+      span {
+        position: relative;
+        width: 36px;
+        height: 20px;
+        border-radius: 44px;
+        background-color: #F1F1F2;
+        @include transition(background-color);
+
+        &:after {
+          content: '';
+          position: absolute;
+          top: 2px;
+          left: 2px;
+          width: 16px;
+          height: 16px;
+          border-radius: 50%;
+          background-color: #4c4355;
+          @include transition(transform, background-color);
+        }
+      }
+    }
+  }
+
   &__table {
     width: 100%;
     @include adaptive(1279) {
       width: 1200px;
+    }
+
+    &--btnHide {
+      tbody {
+        tr {
+          &:hover {
+            td {
+              .c-btn {
+                &__wrapper {
+                  opacity: 1;
+                  @include transition(opacity);
+                }
+              }
+            }
+          }
+        }
+
+        td {
+         .c-btn {
+           height: 32px;
+           font-size: 14px;
+
+           &__wrapper {
+             opacity: 0;
+             @include transition(opacity);
+           }
+         }
+        }
+      }
     }
 
     &-container {
